resubmission: fixed filter-options on iPhone SE

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,8 +1,16 @@
 /*phones for ants*/
+
 @media screen and (min-width: 320px) and (max-width: 410px) {
     nav h1 a {
         font-size: 0.7em;
         letter-spacing: 5px;
+    }
+    .filter-options h2 {
+        font-size: 1em;
+    }
+    .filter-options select {
+        font-size: 1em;
+        width: 70%;
     }
     #restaurant-name {
         font-size: 1.5em;
@@ -26,6 +34,7 @@
 }
 
 /*other mobile devices*/
+
 @media screen and (max-width: 450px) {
     nav h1 a {
         letter-spacing: 5px;
@@ -36,4 +45,5 @@
 as I'd like to come back and refine the app someday*/
 
 /*tablets*/
+
 @media screen and (min-width: 451px) and (max-width: 849px) {}
